--- a/style.css
+++ b/style.css
@@ -1,34 +1,29 @@
-*{
+* {
   padding: 0;
   margin: 0;
-  font-family: 'lato', sans-serif;
 }
 
-.top-heading {
-  font-size: 25px;
-  text-align: center;
-  padding: 30px;
-  font-weight: 800;
-
+button {
+  padding: 3px;
+  margin: 5px;
 }
 
-.table {
- 
-  margin: 20px;
- 
-  height: 200px;
-  width: 400px;
+#add-btn,
+input {
+  margin: 5px;
 }
 
-tr {
+h1 {
   display: flex;
-  gap: 20px;
-  padding: 20px;
+  justify-content: center;
+  margin: 10px;
 }
 
-.form-group, .form-controls {
-  display: flex;
-  justify-content: flex-start;
-  gap: 20px;
-  padding: 15px;
+th,
+td {
+  padding-left: 10px;
+}
+
+input {
+  padding-left: 10px;
 }
