--- a/style.css
+++ b/style.css
@@ -42,17 +42,15 @@ tr {
 main {
   display: flex;
   flex-direction: column;
-
-  /* align-items: center;
-  text-align: center; */
 }
 
 #book-list {
   margin-top: 40px;
+  display: flex;
+  justify-content: center;
 }
 
 #form-section {
-  display: none;
   flex-direction: column;
   align-items: center;
   margin-top: 40px;
@@ -72,7 +70,6 @@ main {
 }
 
 #contact {
-  display: none;
   flex-direction: column;
   padding: 24px;
   align-items: center;
