Add more styles to footer stick on bottom

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-family: 'Comic Sans', sans-serif;
 }
 
+body {
+  margin-bottom: 50px;
+}
+
 button {
   justify-content: flex-end;
   padding: 3px;
@@ -131,13 +135,21 @@ main {
 
 .footer {
   display: flex;
-  width: 98%;
+  width: 100%;
   border: 2px solid black;
   margin: 10px;
   padding: 10px;
+  position: fixed;
+  height: 30px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 0;
+  align-items: center;
 }
 
 .footer .h4 {
   padding: 10px;
   margin: 10px;
+  text-align: center;
 }
